oplus: aston.config: Build split DTBs
Signed-off-by: inferno0230 <mail@inferno0230.in>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2156,6 +2156,13 @@ config SALAMI_DTB
 	bool "Oplus salami device DTB"
 	help
 	  Only include Oplus salami device specific device tree.
+	  
+config ASTON_DTB
+	select OPLUS_DEVICE_DTBS
+	default n
+	bool "Oplus aston device DTB"
+	help
+	  Only include Oplus aston device specific device tree. 
 
 endmenu
 
