oplus: xigua.config: Build split DTBs
Signed-off-by: inferno0230 <mail@inferno0230.in>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2162,7 +2162,14 @@ config ASTON_DTB
 	default n
 	bool "Oplus aston device DTB"
 	help
-	  Only include Oplus aston device specific device tree. 
+	  Only include Oplus aston device specific device tree.
+
+config XIGUA_DTB
+	select OPLUS_DEVICE_DTBS
+	default n
+	bool "Oplus xigua device DTB"
+	help
+	  Only include Oplus xigua device specific device tree.
 
 endmenu
 
