--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2171,6 +2171,13 @@ config XIGUA_DTB
 	help
 	  Only include Oplus xigua device specific device tree.
 
+config XUEYING_DTB
+	select OPLUS_DEVICE_DTBS
+	default n
+	bool "Oplus xueying device DTB"
+	help
+	  Only include Oplus xueying device specific device tree.
+
 endmenu
 
 config SYSVIPC_COMPAT
